# example-todo-fastapi

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  README_k8s.md  compose.yaml  config.py  pyproject.toml  requirements.txt  start-uvicorn.sh  start.sh  uvicorn-start-reload.sh
.github/workflows/: cicd.yaml
app/: __init__.py  crud.py  db.py  db_migration.py  main.py  models.py  schemas.py  security.py
app/routers/: auth.py  todos.py  users.py
app/templates/: base.html  index.html  login.html  todos.html
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service-account.yaml  service.yaml
