[tool.poetry]
name = "example-todo-fastapi"
version = "0.1.0"
description = ""
authors = ["Bin Le <bin.le.code@gmail.com>"]
readme = "README.md"
# use Poetry only for dependency management but not for packaging
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.10.6"}
jinja2 = "^3.1.5"
filelock = "^3.17.0"
starsessions = "^2.2.1"
python-multipart = "^0.0.20"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

